--- a/SerialSync/wwwroot/index.html
+++ b/SerialSync/wwwroot/index.html
@@ -27,7 +27,7 @@
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
-
+    <script src="myjs.js"></script>
 </body>
 
 </html>
