就差接受区了

--- a/SerialSync/wwwroot/index.html
+++ b/SerialSync/wwwroot/index.html
@@ -16,7 +16,21 @@
 
     <div class="status-bar-safe-area"></div>
 
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="background">
+            <div class="wrap">
+                <div class="spacer"></div>
+                <div id="outer-barG">
+                    <div id="front-barG" class="bar-animationG">
+                        <div id="barG_1" class="bar-lineG"></div>
+                        <div id="barG_2" class="bar-lineG"></div>
+                        <div id="barG_3" class="bar-lineG"></div>
+                    </div>
+                </div>
+                <h2>请稍等<span ></span><br />即将启动SerialSync...</h2>
+            </div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
